# swagger.json
@@ -1,8 +1,8 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "API Tests",
-    "description": "API for NodeJS",
+    "title": "Resource APIs",
+    "description": "Get started with the APIs",
     "version": "1.0.0"
   },
   "host": "project2-q20j.onrender.com",
@@ -21,16 +21,6 @@
         }
       }
     },
-    "/api-docs": {
-      "get": {
-        "description": "",
-        "responses": {
-          "default": {
-            "description": ""
-          }
-        }
-      }
-    },
     "/tests/": {
       "get": {
         "description": "",
@@ -42,7 +32,7 @@
       },
       "post": {
         "tags": [
-          "Hello"
+          ""
         ],
         "description": "",
         "parameters": [
